COZMO-15268 Code Lab fixes cutoff animated green flag #6260

--- a/unity/Cozmo/Assets/StreamingAssets/Scratch/css/common_vertical.css
+++ b/unity/Cozmo/Assets/StreamingAssets/Scratch/css/common_vertical.css
@@ -287,6 +287,7 @@ button:focus {
     background-size: cover;
     pointer-events: auto;
     border: 0;
+    padding: 0;
 }
 
 #navigation .greenflag button:active {
